fix: spdv-914 - Modals are partially cut off in File Manager on Windows (Chrome) (#219)
* fix: spdv-914

* refactor: spdv-914-fix

* refactor: spdv-914-fix

--- a/src/modules/filemanager/components/ConfirmModal/ConfirmModal.scss
+++ b/src/modules/filemanager/components/ConfirmModal/ConfirmModal.scss
@@ -7,8 +7,6 @@
 }
 
 .fm-modal-container .fm-modal-window-body .fm-modal-white-section {
-  max-height: 50vh;
-  overflow: auto;
   word-break: break-word;
   padding: 12px 14px;
   border-radius: 8px;
